--- a/web/src/main/webapp/includes/NewLoginStyles.css
+++ b/web/src/main/webapp/includes/NewLoginStyles.css
@@ -2,13 +2,23 @@
 
 /* general style propertyies */
 
-body.login_BG { background: url(../images/login_BG2.gif) repeat-x top left #FFFFFF; }
+body.login_BG { 
+/*
+background: 
+url(../images/login_BG2.gif) 
+repeat-x top left #FFFFFF; 
+*/
+}
 
-div.login_BG { background: url(../images/login_BG.gif) no-repeat top center; height: 100%; padding-top: 117px; }
+div.login_BG { 
+/*
+background: url(../images/login_BG.gif) no-repeat top center; height: 100%; padding-top: 117px;
+*/
+ }
 
-#OClogo { background: url(../images/OC_login_logo.png) no-repeat top left; width: 428px; height: 112px; }
+#OClogo { background: url(../images/OC_login_logo.png) no-repeat top left; width: 228px; height: 210px; }
 
-#OClogoIE6 { background: url(../images/OC_login_logo.gif) no-repeat top left; width: 428px; height: 112px; }
+#OClogoIE6 { background: url(../images/OC_login_logo.gif) no-repeat top left; width: 228px; height: 210px; }
 
 .loginBoxes { margin-bottom: 100px; }
 
